chore: serialize sandbox tests and enforce branch prompts - Add serial_test dev-dependency and mark sandbox integration tests serial to avoid AH_HOME/DB races. - Require --branch when task files are disabled and non-interactive or bail interactively when not on an agent branch.

--- a/crates/ah-cli/Cargo.toml
+++ b/crates/ah-cli/Cargo.toml
@@ -119,3 +119,4 @@ tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tempfile = { workspace = true }
 tui-testing = { path = "../tui-testing" }
 assert_cmd = "2.0"
+serial_test = "2.0"
