feat(ah-fs-snapshots): Integrate the AgentFS FUSE backend as a snapshot provider

--- a/crates/ah-fs-snapshots/Cargo.toml
+++ b/crates/ah-fs-snapshots/Cargo.toml
@@ -17,6 +17,7 @@ thiserror.workspace = true
 async-trait = "0.1"
 tempfile.workspace = true
 libc = "0.2"
+ssz = { package = "ethereum_ssz", version = "0.8" }
 
 agentfs-daemon = { path = "../agentfs-daemon", optional = true }
 agentfs-interpose-e2e-tests = { path = "../agentfs-interpose-e2e-tests", optional = true }
