feat: add task scenario coverage and branch handling fixes - Add scenario-driven ah task tests for new branch, follow-up, metadata-only, and push flows - Enhance task branch resolution to validate existing branches even when skipping task files - Add serde_yaml test dependency and update status doc for M2 scenario coverage

--- a/crates/ah-cli/Cargo.toml
+++ b/crates/ah-cli/Cargo.toml
@@ -120,3 +120,4 @@ tempfile = { workspace = true }
 tui-testing = { path = "../tui-testing" }
 assert_cmd = "2.0"
 serial_test = "2.0"
+serde_yaml = "0.9"
