--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,11 @@ members = [
   "tests/agentfs-daemon-backstore-integration",
   "tests/tools/mock-tui-dashboard",
   "tests/fs-snapshots-test-harness",
+  "tests/e2e-stackable-hooks",
+  "tests/e2e-stackable-hooks-b",
+  "tests/e2e-shim-a",
+  "tests/e2e-shim-b",
+  "tests/e2e-call-real-shim",
   "crates/agentfs-interpose-shim",
   "crates/agentfs-interpose-e2e-tests",
   "crates/agentfs-daemon",
@@ -85,6 +90,7 @@ members = [
   "crates/ah-command-trace-shim",
   "crates/ah-command-trace-client",
   "crates/ah-command-trace-e2e-tests",
+  "crates/stackable-interpose",
 ]
 exclude = ["vendor", "PoC", "tests/agentfs-daemon-backstore-integration"]
 resolver = "2"
@@ -99,7 +105,7 @@ serde_json = "1.0"
 toml = "0.8"
 
 # Command trace shim dependencies
-redhook = "2.0"
+stackable-interpose = { path = "crates/stackable-interpose" }
 ctor = "0.2"
 scopeguard = "1.2"
 
