--- a/crates/agentfs-client/Cargo.toml
+++ b/crates/agentfs-client/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+ah-logging.workspace = true
 anyhow.workspace = true
 libc.workspace = true
 agentfs-daemon = { path = "../agentfs-daemon" }
