--- a/crates/ah-logging/Cargo.toml
+++ b/crates/ah-logging/Cargo.toml
@@ -18,6 +18,7 @@ anyhow = { workspace = true }
 tokio = { workspace = true, optional = true }
 dirs = "5.0"
 regex = { version = "1.10", optional = true }
+clap = { workspace = true, features = ["derive"] }
 
 [dev-dependencies]
 
