feat(scenario-format,rest-server): Steps towards creating a Rust mock server
Other changes:

A new scenario playback crate will be responsible for scenario playback in the
mock server, the LLM API Proxy and the local mock dashboard (not yet integrated)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ members = [
   "crates/ah-rest-client",
   "crates/ah-client-api",
   "crates/ah-rest-server",
+  "crates/ah-scenario-format",
   "crates/ah-test-scenarios",
   "crates/ah-rest-client-mock",
   "crates/ah-rest-mock-client",
