--- a/crates/ah-mux/Cargo.toml
+++ b/crates/ah-mux/Cargo.toml
@@ -19,7 +19,7 @@ async-trait = "0.1"
 tempfile = "3.0"
 crossterm = { workspace = true }
 tracing = { workspace = true }
-serial_test = "3"
+serial_test = { version = "3", features = ["file_locks"] }
 
 [features]
 default = [
