--- a/docs/site/package.json
+++ b/docs/site/package.json
@@ -9,7 +9,7 @@
     "dev": "next --webpack",
     "build": "next build --webpack && yarn build:pagefind",
     "start": "next start",
-    "build:pagefind": "pagefind --site .next/server/app --output-path public/_pagefind"
+    "build:pagefind": "pagefind --site .next/server/app --output-path public/_pagefind && cp -r public/_pagefind/ out/"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.17",
