--- a/crates/ah-rest-server/Cargo.toml
+++ b/crates/ah-rest-server/Cargo.toml
@@ -15,6 +15,7 @@ axum = { version = "0.7", features = [
   "tokio",
   "http2",
   "matched-path",
+  "ws",
 ] }
 axum-extra = { version = "0.9", features = ["typed-header"] }
 tower = "0.5"
@@ -102,8 +103,8 @@ reqwest = { version = "0.12", default-features = false, features = [
   "json",
 ] }
 
-# ACP runtime (vendored)
-agent-client-protocol = { workspace = true }
+# ACP runtime
+agent-client-protocol = { version = "0.4", optional = true }
 tokio-tungstenite = "0.23"
 tungstenite = "0.23"
 proptest = "1.4"
