chore: harden acp prompt backpressure handling - bound prompt/cancel responses with context_limit stop reason and shorter burst for backpressure test - seed scenario assertions and add timeout-driven backpressure check to avoid idle resets

--- a/tests/acp_bridge/scenarios/prompt_turn_basic.yaml
+++ b/tests/acp_bridge/scenarios/prompt_turn_basic.yaml
@@ -16,3 +16,15 @@ events:
   - at_ms: 100
     kind: status
     value: "completed"
+assertions:
+  - kind: has_event
+    event:
+      type: status
+      status: running
+  - kind: has_event
+    event:
+      type: log
+  - kind: has_event
+    event:
+      type: status
+      status: completed
