chore: add initialize/auth scenario coverage - Add assertions to initialize_and_auth scenario and test it end-to-end via the ACP gateway. - Extend initialize test to run scenario playback with legacy events/assertions. - Test: just test-rust-single acp_initialize_and_auth_scenario_succeeds.

--- a/tests/acp_bridge/scenarios/initialize_and_auth.yaml
+++ b/tests/acp_bridge/scenarios/initialize_and_auth.yaml
@@ -10,3 +10,12 @@ events:
   - at_ms: 10
     kind: status
     value: "completed"
+assertions:
+  - kind: has_event
+    event:
+      type: status
+      status: running
+  - kind: has_event
+    event:
+      type: status
+      status: completed
