--- a/webui/app/package.json
+++ b/webui/app/package.json
@@ -21,7 +21,9 @@
     "type-coverage": "type-coverage",
     "test": "vitest",
     "test:run": "vitest run",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "build:storybook": "storybook build",
+    "storybook": "storybook dev -p 6006"
   },
   "typeCoverage": {
     "atLeast": 95,
@@ -52,12 +54,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@chromatic-com/storybook": "^4.1.3",
     "@livestore/livestore": "^0.3.0",
     "@livestore/solid": "^0.3.0",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.1.0",
+    "@storybook/addon-a11y": "^10.0.8",
+    "@storybook/addon-docs": "^10.0.8",
+    "@storybook/addon-links": "^10.0.8",
+    "@storybook/addon-onboarding": "^10.0.8",
+    "@storybook/addon-vitest": "^10.0.8",
+    "@vitest/browser": "^4.0.14",
+    "@vitest/browser-playwright": "^4.0.14",
+    "@vitest/coverage-v8": "^4.0.14",
+    "playwright": "^1.57.0",
     "solid-js": "^1.9.5",
+    "storybook": "^10.0.8",
+    "storybook-solidjs-vite": "^10.0.9",
     "tom-select": "^2.4.3",
     "vinxi": "^0.5.8"
   },
@@ -87,7 +101,7 @@
     "vite-plugin-checker": "^0.11.0",
     "vite-plugin-solid": "^2.11.9",
     "vite-plugin-solid-svg": "^0.8.1",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.14"
   },
   "engines": {
     "node": ">=22"
