feat: wire live prompt injection to recorder pty - Added shared SSZ TaskManagerMessage + socket helpers and taught `ah agent record` to read InjectInput frames into the PTY. - TaskExecutor now starts the task-manager socket, passes it to the recorder, and forwards inject_message bytes (plus LocalTaskManager helper); updated status doc. - Tested with `cargo test -p ah-rest-server inject_message_forwards_to_recorder_socket -- --nocapture`.

--- a/crates/ah-rest-server/Cargo.toml
+++ b/crates/ah-rest-server/Cargo.toml
@@ -78,6 +78,7 @@ tower_governor = "0.4"
 # SSE streaming
 futures = { workspace = true }
 tokio-stream = { version = "0.1", features = ["sync"] }
+ssz = { package = "ethereum_ssz", version = "0.8" }
 
 # URL handling
 url = { workspace = true }
