--- a/crates/ah-rest-server/Cargo.toml
+++ b/crates/ah-rest-server/Cargo.toml
@@ -121,3 +121,4 @@ agentfs = ["ah-fs-snapshots/agentfs"]
 tempfile = { workspace = true }
 mockall = { workspace = true }
 ah-rest-client = { path = "../ah-rest-client" }
+serde_yaml = { workspace = true }
