feat: exercise terminal follower path in ACP scenarios
- Added scenario-driven ACP follow/detach test driver with placeholder substitution and tolerant ordering.
- Reordered terminal_follow_detach scenario, removed scenario-store assertions, and exposed scenario linger flag in the mock server CLI.
- Added serde_yaml dev dependency; test suite, clippy, and pre-commit now pass.

--- a/crates/ah-rest-server/Cargo.toml
+++ b/crates/ah-rest-server/Cargo.toml
@@ -121,3 +121,4 @@ agentfs = ["ah-fs-snapshots/agentfs"]
 tempfile = { workspace = true }
 mockall = { workspace = true }
 ah-rest-client = { workspace = true }
+serde_yaml = { workspace = true }
