feat(docs): Move to `apps/docs.agent-harbor.dev`
- Rename project name to `@agent-harbor/docs.agent-harbor.dev`
- Update MD files

--- a/.github/workflows/deploy-sites.yml
+++ b/.github/workflows/deploy-sites.yml
@@ -34,8 +34,8 @@ jobs:
         include:
           - label: Docs site
             cf_project: agent-harbor-docs
-            build_command: yarn workspace site build
-            dist_path: docs/site/out
+            build_command: yarn workspace @agent-harbor/docs.agent-harbor.dev build
+            dist_path: apps/docs.agent-harbor.dev/out
           - label: WebUI
             cf_project: agent-harbor-webui
             build_command: just webui-build
