--- a/.lychee.toml
+++ b/.lychee.toml
@@ -1,7 +1,7 @@
 # Copyright 2025 Schelling Point Labs Inc
 # SPDX-License-Identifier: AGPL-3.0-only
 
-include = ["specs/**/*.md", "docs/site/**/*.mdx"]
+include = ["specs/**/*.md", "apps/docs.agent-harbor.dev/**/*.md"]
 exclude = [
   # Vendor directory (external dependencies, not our code)
   ".*/vendor/.*",
