--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "webui/mock-server",
     "webui/e2e-tests",
     "electron-app",
-    "apps/docs.agent-harbor.dev"
+    "apps/docs.agent-harbor.dev",
+    "apps/agent-harbor.dev"
   ],
   "scripts": {
     "knip": "knip"
