--- a/crates/ah-rest-server/Cargo.toml
+++ b/crates/ah-rest-server/Cargo.toml
@@ -105,7 +105,7 @@ reqwest = { version = "0.12", default-features = false, features = [
 ] }
 
 # ACP runtime
-agent-client-protocol = { version = "0.4", optional = true }
+agent-client-protocol = { version = "0.4.5" }
 tokio-tungstenite = "0.23"
 tungstenite = "0.23"
 proptest = "1.4"
