chore(deps): vendor rust-sdk submodule and expose notify Vendored agent-client-protocol as git submodule (tag v0.4.7) and pointed ah-rest-server to the path dependency. Patched AgentSideConnection to expose notify and re-export RpcConnection so ACP gateway can emit session/update via SDK.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendor/vt100"]
 	path = vendor/vt100
 	url = git@github.com:blocksense-network/vt100-rust.git
+[submodule "vendor/rust-sdk"]
+	path = vendor/rust-sdk
+	url = https://github.com/agentclientprotocol/rust-sdk
