--- a/crates/ah-rest-server/Cargo.toml
+++ b/crates/ah-rest-server/Cargo.toml
@@ -104,8 +104,8 @@ reqwest = { version = "0.12", default-features = false, features = [
   "json",
 ] }
 
-# ACP runtime
-agent-client-protocol = { version = "0.4.5" }
+# ACP runtime (vendored)
+agent-client-protocol = { path = "../../vendor/rust-sdk" }
 tokio-tungstenite = "0.23"
 tungstenite = "0.23"
 proptest = "1.4"
