feat(acp): wire SDK dispatcher and stdio transport - route ws/stdio through SDK ValueDispatcher for JSON-RPC framing - add stdio driver and session/terminal handlers, reuse event fanout - fix initialize transports to unblock acp_session_catalog_end_to_end - update ACP status handoff notes; SDK warnings noted

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 [submodule "vendor/rust-sdk"]
 	path = vendor/rust-sdk
 	url = https://github.com/agentclientprotocol/rust-sdk
+[submodule "vendor/acp-rust-sdk"]
+    path = vendor/acp-rust-sdk
+    url = git@github.com:blocksense-network/acp-rust-sdk.git
+    branch = agent-harbor
