fix(acp): tighten capability logging and session scoping
- emit warnings for unknown ACP capability flags using SDK structs
- verify initialize advertises _meta.agent.harbor + websocket in tests
- infer projectId from JWT claims for ACP session/list and document progress

--- a/crates/ah-rest-server/Cargo.toml
+++ b/crates/ah-rest-server/Cargo.toml
@@ -122,3 +122,4 @@ tempfile = { workspace = true }
 mockall = { workspace = true }
 ah-rest-client = { path = "../ah-rest-client" }
 serde_yaml = { workspace = true }
+tracing-test = "0.2"
