--- a/crates/ah-rest-server/Cargo.toml
+++ b/crates/ah-rest-server/Cargo.toml
@@ -122,3 +122,4 @@ tempfile = { workspace = true }
 mockall = { workspace = true }
 ah-rest-client = { workspace = true }
 serde_yaml = { workspace = true }
+tracing-test = "0.2"
