--- a/tests/tools/mock-agent/scenarios/task_create_new_branch.yaml
+++ b/tests/tools/mock-agent/scenarios/task_create_new_branch.yaml
@@ -12,23 +12,23 @@ timeline:
         - create
         - scenario-new
         - --prompt
-        - "Scenario new task"
+        - 'Scenario new task'
         - --non-interactive
         - --push-to-remote
-        - "false"
+        - 'false'
       expect:
         exitCode: 0
   - userCommand:
       program: git
-      args: ["checkout", "scenario-new"]
+      args: ['checkout', 'scenario-new']
       expect:
         exitCode: 0
         fs:
           exists:
-            - ".agents/tasks/scenario-new"
+            - '.agents/tasks/scenario-new'
           contains:
-            - path: ".agents/tasks/scenario-new"
-              substring: "Scenario new task"
+            - path: '.agents/tasks/scenario-new'
+              substring: 'Scenario new task'
   - assertGit:
       branch: scenario-new
       exists: true
