--- a/tests/tools/mock-agent/scenarios/task_follow_up_append.yaml
+++ b/tests/tools/mock-agent/scenarios/task_follow_up_append.yaml
@@ -12,15 +12,15 @@ timeline:
         - create
         - follow-branch
         - --prompt
-        - "First follow task"
+        - 'First follow task'
         - --non-interactive
         - --push-to-remote
-        - "false"
+        - 'false'
       expect:
         exitCode: 0
   - userCommand:
       program: git
-      args: ["checkout", "follow-branch"]
+      args: ['checkout', 'follow-branch']
       expect:
         exitCode: 0
   - userCommand:
@@ -28,20 +28,20 @@ timeline:
         - task
         - create
         - --prompt
-        - "Second follow task"
+        - 'Second follow task'
         - --non-interactive
         - --push-to-remote
-        - "false"
+        - 'false'
       expect:
         exitCode: 0
         fs:
           contains:
-            - path: ".agents/tasks/follow-branch"
-              substring: "First follow task"
-            - path: ".agents/tasks/follow-branch"
-              substring: "Second follow task"
-            - path: ".agents/tasks/follow-branch"
-              substring: "--- FOLLOW UP TASK ---"
+            - path: '.agents/tasks/follow-branch'
+              substring: 'First follow task'
+            - path: '.agents/tasks/follow-branch'
+              substring: 'Second follow task'
+            - path: '.agents/tasks/follow-branch'
+              substring: '--- FOLLOW UP TASK ---'
   - assertGit:
       branch: follow-branch
       exists: true
