--- a/tests/tools/mock-agent/scenarios/task_multi_agent_follow.yaml
+++ b/tests/tools/mock-agent/scenarios/task_multi_agent_follow.yaml
@@ -12,24 +12,24 @@ timeline:
         - create
         - multi-demo
         - --prompt
-        - "Coordinate multi-agent test"
+        - 'Coordinate multi-agent test'
         - --agent
         - claude
         - --agent
         - codex
         - --instances
-        - "2"
+        - '2'
         - --fleet
         - qa-team
         - --notifications
-        - "no"
+        - 'no'
         - --follow
         - --non-interactive
         - --push-to-remote
-        - "false"
+        - 'false'
       expect:
         exitCode: 0
-        stdoutContains: "Follow requested"
+        stdoutContains: 'Follow requested'
   - assertGit:
       branch: multi-demo
       exists: true
@@ -37,12 +37,12 @@ timeline:
       commitCount: 1
   - userCommand:
       program: git
-      args: ["checkout", "multi-demo"]
+      args: ['checkout', 'multi-demo']
       expect:
         exitCode: 0
         fs:
           exists:
-            - ".agents/tasks/multi-demo"
+            - '.agents/tasks/multi-demo'
           contains:
-            - path: ".agents/tasks/multi-demo"
-              substring: "Coordinate multi-agent test"
+            - path: '.agents/tasks/multi-demo'
+              substring: 'Coordinate multi-agent test'
