--- a/tests/acp_bridge/scenarios/auth_failure.yaml
+++ b/tests/acp_bridge/scenarios/auth_failure.yaml
@@ -1,10 +1,13 @@
-name: "acp_auth_failure"
-description: "Minimal placeholder scenario: auth should fail when no API key is provided."
+# Copyright 2025 Schelling Point Labs Inc
+# SPDX-License-Identifier: AGPL-3.0-only
+
+name: 'acp_auth_failure'
+description: 'Minimal placeholder scenario: auth should fail when no API key is provided.'
 events:
   - at_ms: 0
     kind: status
-    value: "queued"
+    value: 'queued'
   - at_ms: 10
     kind: status
-    value: "failed"
-    detail: "authentication failed"
+    value: 'failed'
+    detail: 'authentication failed'
