--- a/tests/acp_bridge/scenarios/pause_resume.yaml
+++ b/tests/acp_bridge/scenarios/pause_resume.yaml
@@ -1,27 +1,30 @@
-name: "pause_resume"
-description: "Pause and resume lifecycle for ACP session"
+# Copyright 2025 Schelling Point Labs Inc
+# SPDX-License-Identifier: AGPL-3.0-only
+
+name: 'pause_resume'
+description: 'Pause and resume lifecycle for ACP session'
 events:
   - at_ms: 0
     kind: status
-    value: "queued"
+    value: 'queued'
   - at_ms: 20
     kind: status
-    value: "running"
+    value: 'running'
   - at_ms: 80
     kind: status
-    value: "pausing"
+    value: 'pausing'
   - at_ms: 120
     kind: status
-    value: "paused"
+    value: 'paused'
   - at_ms: 200
     kind: status
-    value: "resuming"
+    value: 'resuming'
   - at_ms: 240
     kind: status
-    value: "running"
+    value: 'running'
   - at_ms: 300
     kind: status
-    value: "completed"
+    value: 'completed'
 assertions:
   - kind: has_event
     event:
