--- a/tests/acp_bridge/scenarios/prompt_turn_basic.yaml
+++ b/tests/acp_bridge/scenarios/prompt_turn_basic.yaml
@@ -1,21 +1,24 @@
-name: "prompt_turn_basic"
-description: "Simple prompt flow with status and log events"
+# Copyright 2025 Schelling Point Labs Inc
+# SPDX-License-Identifier: AGPL-3.0-only
+
+name: 'prompt_turn_basic'
+description: 'Simple prompt flow with status and log events'
 events:
   - at_ms: 0
     kind: status
-    value: "queued"
+    value: 'queued'
   - at_ms: 20
     kind: status
-    value: "running"
+    value: 'running'
   - at_ms: 40
     kind: log
-    message: "processing user prompt"
+    message: 'processing user prompt'
   - at_ms: 80
     kind: thought
-    text: "calling tool"
+    text: 'calling tool'
   - at_ms: 100
     kind: status
-    value: "completed"
+    value: 'completed'
 assertions:
   - kind: has_event
     event:
