feat(ah-tui): Implement session-only split mode preferences
Implemented session-only persistence for split mode preferences and fixed
issues with advanced options handling in the TUI. Split mode preferences
now persist only for the current TUI session and are not written to disk,
providing a better user experience without polluting configuration files.

Key Changes:

1. Session-Only Split Mode Preferences
   - Removed Settings::save_default_split_mode() that wrote to config files
   - Split mode preference now stored in-memory only (Settings.default_split_mode)
   - Preference updates on each launch method selection (t/s/h/v shortcuts)
   - Automatically resets when TUI restarts
   - Added documentation explaining session-only behavior

2. Fixed Advanced Options Integration
   - Separated advanced options configuration from split mode selection
   - Advanced options now stored in TaskEntryViewModel.advanced_options
   - Options configured via Launch Options modal persist in draft card
   - All launch methods (keyboard shortcuts, Go button, modal actions) now
     consistently use options from draft card
   - Changed default interactive_mode from false to true (TUI context)

3. Unified Launch Flow
   - Simplified launch_task_with_option() to use draft card options
   - Removed complex conditional logic for when to apply options
   - All launch paths now follow: configure options → store in card → launch
   - Consistent behavior regardless of launch method

4. Enhanced Debugging
   - Added comprehensive logging to track advanced options flow
   - Logs when options are saved to draft card
   - Logs when options are retrieved and applied to launch

Architecture:
- Before: Advanced options extracted from modal at launch time, causing
  inconsistent behavior based on launch method
- After: Advanced options stored in draft card state, ensuring consistent
  behavior for all launch methods (keyboard shortcuts, modal, Go button)

Benefits:
- Split mode preferences remembered 

--- a/crates/ah-config-types/Cargo.toml
+++ b/crates/ah-config-types/Cargo.toml
@@ -10,6 +10,7 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 ah-domain-types = { workspace = true }
+ah-mux-core = { workspace = true }
 serde.workspace = true
 schemars = { version = "0.8", features = ["preserve_order"] }
 
